--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>iNaturalist Fish AOI Map</title>
-  <style>
-    html, body, #map { height: 100%; margin: 0; padding: 0; }
-  </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-</head>
-<body>
-  <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="script_fish.js"></script>
+<head>
+    <meta charset="UTF-8" />
+    <title>iNaturalist Fish AOI Map</title>
+    <style>
+        html,
+        body,
+        #map {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+</head>
+
+<body>
+    <div id="map"></div>
+
+    <footer
+        style="position:absolute; bottom:5px; left:5px; background:white; padding:4px 8px; font-size:12px; opacity:0.8;">
+        Icons courtesy of <a href="https://www.svgrepo.com/svg/481416/salmon-1" target="_blank">SVG Repo</a>.
+    </footer>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js"></script>
+    <script src="script_fish.js"></script>
 </body>
+
 </html>
